Migrate (what I could find) legacy component system uses to kyori component system Create List command Remove fionn command Remove test command Add Mojang Utils Auto add Plex Players back to cache on start if any are online